--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,u ser-scalable=no" />
   <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
   <link rel="stylesheet" href="/css/reset.css">
-  <title>gshop-client</title>
+  <title>外卖</title>
   <link rel="stylesheet" href="http://at.alicdn.com/t/font_518606_xzdcpfq0ve.css" />
   <script src="https://as.alipayobjects.com/g/component/fastclick/1.0.6/fastclick.js"></script>
   <script>
